# Sistema-de-Control-de-Acceso-y-Monitoreo-IoT-con-Gemelo-Digital-en-Unity

./: CMakeLists.txt  ESP32_S3_PIN_MAP.md  FILTRO_IIR.md  MIGRATION_SUMMARY.md  README.md  VISUALIZACION_FILTRO.md  build_esp32s3.ps1  logs_format.json  partitions.csv  plot_config.json  plot_serial.py  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/: copilot-instructions.md
camera/: main.c
main/: CMakeLists.txt  lock_cycle_test.c  main.c  mfrc522_min.c  mfrc522_min.h  rfid_test.c
